<resources>
    <string name="app_name">Lost And Found  App</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_button">CREATE A NEW ADVERT</string>
    <string name="show_all_button">SHOW ON MAP</string>
    <string name="name_placeholder">Place Name</string>
    <string name="location_placeholder">Location</string>
    <string name="get_location">GET CURRENT LOCATION</string>
    <string name="show_button">SHOW ON MAP</string>
    <string name="save_button">SAVE</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="PlacesAPI">AIzaSyClyw1Sl2zCvB9DHFTs6CL9iAyuNT5Gfg4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>